--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -20,7 +20,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <sonar.organization>viglet-turing</sonar.organization>
+        <sonar.organization>viglet</sonar.organization>
         <sonar.projectKey>turing-app</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.cpd.exclusions>**/persistence/dto/**,**/persistence/model/**,**/plugins/nlp/otca/response/xml/**
