--- a/pom.xml
+++ b/pom.xml
@@ -309,17 +309,18 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    <repositories>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
+<repositories>
+    <repository>
+        <id>Central</id>
+        <name>Maven Central</name>
+        <url>https://repo1.maven.org/maven2/</url>
+    </repository>
+</repositories>
     <distributionManagement>
         <repository>
             <id>github</id>
             <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/openturing/turing</url>
+            <url>https://maven.pkg.github.com/openviglet/turing</url>
         </repository>
     </distributionManagement>
 </project>
