--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -19,8 +19,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <sonar.organization>openviglet</sonar.organization>
-        <sonar.projectKey>openviglet_turing</sonar.projectKey>
+        <sonar.organization>viglet</sonar.organization>
+        <sonar.projectKey>viglet_turing</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.cpd.exclusions>**/persistence/dto/**,**/persistence/model/**
         </sonar.cpd.exclusions>
