--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ name: Java CI with Maven and SonarCloud
 
 on:
   push:
-    branches: [ "2025.1" ]
+    branches: [ "main", "2025.1" ]
   pull_request:
     types: [ opened, synchronize, reopened ]
 jobs:
