--- a/turing-aem/aem-cli-sample/scripts/prod/prod-publish/turing-aem.properties
+++ b/turing-aem/aem-cli-sample/scripts/prod/prod-publish/turing-aem.properties
@@ -3,12 +3,12 @@ turing.apiKey=api_key_here
 turing.mapping.file=../content-mapping-sample.json
 turing.provider.name=AEM
 
-dps.site.default.sn.site=insper-prod-publish
+dps.site.default.sn.site=prod-publish
 dps.site.default.sn.locale=pt
 dps.site.default.url.prefix=https://publish-pxxxx-exxxx.adobeaemcloud.com
 sn.default.once.pattern.path=^/content/sample/pt/(news|webinars)/20(22|23)
-sn.insper-prod-author.en.path=/content/sample/en
-sn.insper-prod-author.pt.path=/content/sample/pt
+sn.prod-author.en.path=/content/sample/en
+sn.prod-author.pt.path=/content/sample/pt
 
 cms.url=https://author-pxxxx-exxxx.adobeaemcloud.com
 cms.username=username_here
