--- a/turing-aem/aem-plugin/pom.xml
+++ b/turing-aem/aem-plugin/pom.xml
@@ -60,6 +60,12 @@
         <dependency>
             <groupId>com.viglet.turing</groupId>
             <artifactId>turing-java-sdk</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.viglet.turing.connector</groupId>
