--- a/turing-connector/connector-app/src/main/resources/application.properties
+++ b/turing-connector/connector-app/src/main/resources/application.properties
@@ -22,6 +22,7 @@ turing.url=http://localhost:2700
 turing.apiKey=4618ac5e0e5640f8bd8ea8c83
 turing.connector.job.size=50
 turing.connector.plugin=com.viglet.turing.connector.plugin.webcrawler.TurWCPlugin
+turing.scheduler.enabled=false
 ## H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
