--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>turing-app</artifactId>
     <version>${revision}</version>
     <name>Turing ES Application</name>
-    <url>https://github.com/openturing/turing</url>
+    <url>https://github.com/openviglet/turing</url>
     <packaging>jar</packaging>
     <properties>
         <spring-boot.version>3.4.0</spring-boot.version>
@@ -21,7 +21,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <sonar.organization>viglet</sonar.organization>
-        <sonar.projectKey>turing-app</sonar.projectKey>
+        <sonar.projectKey>viglet_turing</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.cpd.exclusions>**/persistence/dto/**,**/persistence/model/**,**/plugins/nlp/otca/response/xml/**
         </sonar.cpd.exclusions>
