--- a/turing-ui/package.json
+++ b/turing-ui/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.0.5",
-    "@angular/cdk": "18.2.13",
-    "@angular/common": "19.0.5",
-    "@angular/compiler": "19.0.5",
-    "@angular/core": "19.0.5",
-    "@angular/forms": "19.0.5",
-    "@angular/localize": "19.0.5",
-    "@angular/platform-browser": "19.0.5",
-    "@angular/platform-browser-dynamic": "19.0.5",
-    "@angular/router": "19.0.5",
+    "@angular/animations": "20.0.0",
+    "@angular/cdk": "20.0.1",
+    "@angular/common": "20.0.0",
+    "@angular/compiler": "20.0.0",
+    "@angular/core": "20.0.0",
+    "@angular/forms": "20.0.0",
+    "@angular/localize": "20.0.0",
+    "@angular/platform-browser": "20.0.0",
+    "@angular/platform-browser-dynamic": "20.0.0",
+    "@angular/router": "20.0.0",
     "@primer/css": "21.4.0",
     "@primer/octicons": "19.12.0",
     "@primer/styled-octicons": "19.12.0",
@@ -40,10 +40,10 @@
     "turing-ui": "file:"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.0.6",
-    "@angular/cli": "19.0.6",
-    "@angular/compiler-cli": "19.0.5",
-    "@angular/language-service": "19.0.5",
+    "@angular/build": "^20.0.0",
+    "@angular/cli": "20.0.0",
+    "@angular/compiler-cli": "20.0.0",
+    "@angular/language-service": "20.0.0",
     "@types/jasmine": "5.1.4",
     "@types/jasminewd2": "2.0.13",
     "@types/node": "22.9.3",
@@ -54,6 +54,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "typescript": "~5.8.3"
   }
 }
