--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,6 +25,7 @@ updates:
     open-pull-requests-limit: 15
     ignore:
       - dependency-name: "typescript"
+      - dependency-name: "@primer/css"
     groups:
       angular:
         applies-to: version-updates
