- AEM Connector multiples imports, AEM Server Configuration

--- a/turing-aem/aem-server/archetype.properties
+++ b/turing-aem/aem-server/archetype.properties
@@ -5,7 +5,7 @@ artifactId=aem-turing
 version=2025.2
 package=com.viglet.turing.aem.server
 appId=turing
-appTitle=Turing AEM Project
+appTitle=Turing AEM
 aemVersion=cloud
 sdkVersion=latest
 languageCountry=${languageCountry}
