--- a/turing-connector/connector-app/src/main/resources/application.properties
+++ b/turing-connector/connector-app/src/main/resources/application.properties
@@ -24,6 +24,8 @@ turing.apiKey=4618ac5e0e5640f8bd8ea8c83
 turing.connector.job.size=50
 turing.connector.plugin=com.viglet.turing.connector.plugin.webcrawler.TurWCPlugin
 turing.scheduler.enabled=false
+turing.connector.cron=-
+turing.connector.cron.zone=UTC
 
 ## H2
 spring.h2.console.enabled=true
