- AEM Event Handler checks NPE

--- a/turing-aem/aem-plugin-sample/scripts/wknd/turing-connector.conf
+++ b/turing-aem/aem-plugin-sample/scripts/wknd/turing-connector.conf
@@ -1,4 +1,1 @@
-TURING_URL=http://localhost:2700
-TURING_API_KEY=2803004d34004b4e8e8cb709f
-LOADER_PATH=/appl/viglet/turing/aem/libs/
-JAVA_OPTS="-Xmx1g -Xms1g"
+JAVA_OPTS="-Xmx256m -Xms256m -Dloader.path=/appl/viglet/turing/aem/libs/ -Dturing.url=http://localhost:2700 -Dturing.apiKey=2803004d34004b4e8e8cb709f"
