- MongoDBAppender: Server and Connector. Indexing Status Logging

--- a/turing-connector/connector-app/src/main/resources/application.properties
+++ b/turing-connector/connector-app/src/main/resources/application.properties
@@ -51,6 +51,7 @@ spring.jpa.properties.hibernate.generate_statistics=false
 spring.jmx.default-domain=com.viglet.turing.connector.persistence.model
 
 ## Logging
+logging.config=classpath:logback-spring.xml
 logging.level.org.springframework=INFO
 logging.level.com.viglet=INFO
 logging.level.org.apache=INFO
