--- a/turing-app/src/main/resources/application.properties
+++ b/turing-app/src/main/resources/application.properties
@@ -49,6 +49,7 @@ spring.jpa.properties.hibernate.generate_statistics=false
 spring.jmx.default-domain=com.viglet.turing.persistence.model
 
 ## Logging
+logging.config=classpath:logback-spring.xml
 logging.level.org.springframework=INFO
 logging.level.com.viglet=INFO
 logging.level.org.apache=INFO
@@ -58,7 +59,6 @@ logging.level.dev.ai4j.openai4j = INFO
 logging.file.name=store/logs/turing.log
 logging.logback.rollingpolicy.max-file-size=25MB
 logging.logback.rollingpolicy.max-history=10
-
 
 ## Access Logs
 server.tomcat.accesslog.enabled=false
