--- a/turing-app/src/main/resources/application.properties
+++ b/turing-app/src/main/resources/application.properties
@@ -11,7 +11,12 @@ turing.keycloak=false
 turing.url=http://localhost:2700
 turing.search.cache.ttl.seconds=86400000
 turing.search.cache.enabled=false
-
+turing.mongodb.enabled=false
+turing.mongodb.uri=mongodb://localhost:27017
+turing.mongodb.logging.database=turingLog
+turing.mongodb.logging.collection.server=server
+turing.mongodb.logging.collection.aem=aem
+turing.mongodb.logging.collection.indexing=indexing
 ## Compression
 server.compression.enabled=true
 server.compression.mime-types=application/json,text/css,application/javascript
