- AEM Logging UI

--- a/turing-app/src/main/resources/application.properties
+++ b/turing-app/src/main/resources/application.properties
@@ -4,19 +4,24 @@ server.port=${PORT:2700}
 
 ## Turing
 turing.allowedOrigins=*
-turing.solr.timeout=30000
-turing.solr.cloud=false
 turing.multi-tenant=false
 turing.keycloak=false
 turing.url=http://localhost:2700
+
+# Turing - Search
+turing.solr.timeout=30000
+turing.solr.cloud=false
 turing.search.cache.ttl.seconds=86400000
 turing.search.cache.enabled=false
+
+## Turing - MongoDB
 turing.mongodb.enabled=false
 turing.mongodb.uri=mongodb://localhost:27017
 turing.mongodb.logging.database=turingLog
 turing.mongodb.logging.collection.server=server
 turing.mongodb.logging.collection.aem=aem
 turing.mongodb.logging.collection.indexing=indexing
+
 ## Compression
 server.compression.enabled=true
 server.compression.mime-types=application/json,text/css,application/javascript
