--- a/turing-app/src/main/resources/application.properties
+++ b/turing-app/src/main/resources/application.properties
@@ -21,6 +21,7 @@ turing.mongodb.logging.database=turingLog
 turing.mongodb.logging.collection.server=server
 turing.mongodb.logging.collection.aem=aem
 turing.mongodb.logging.collection.indexing=indexing
+turing.mongodb.logging.purge.days=30
 
 ## Compression
 server.compression.enabled=true
