Add Solr validation and improve connector API
Introduces Solr validation endpoints to the connector API, enabling detection of missing and extra content between the connector and Solr. Adds new DTOs and repository methods to support these features, updates dependencies to include SolrJ and Unirest, and refactors code for improved readability and concurrency handling. Also adds a new API for retrieving site locales by name, and updates configuration for Hazelcast and Solr endpoints.

--- a/turing-app/src/main/resources/application.properties
+++ b/turing-app/src/main/resources/application.properties
@@ -104,6 +104,9 @@ spring.artemis.embedded.data-directory=store/queue
 spring.artemis.pool.max-connections=10
 spring.artemis.embedded.queues=indexing.queue
 
+## Hazelcast
+hazelcast.health.monitoring.level=OFF
+
 ## JMS
 spring.jms.template.default-destination=indexing.queue
 
