--- a/turing-connector/connector-app/src/main/resources/application.properties
+++ b/turing-connector/connector-app/src/main/resources/application.properties
@@ -26,6 +26,7 @@ turing.connector.plugin=com.viglet.turing.connector.plugin.webcrawler.TurWCPlugi
 turing.scheduler.enabled=false
 turing.connector.cron=-
 turing.connector.cron.zone=UTC
+turing.solr.endpoint=http://localhost:8983
 
 ## H2
 spring.h2.console.enabled=true
