- Connector: Using Service, diabled h2 console and HazelCast Monitor log

--- a/turing-app/src/main/resources/application.properties
+++ b/turing-app/src/main/resources/application.properties
@@ -35,8 +35,8 @@ springdoc.swagger-ui.path=/swagger-ui.html
 ## Liquibase
 ## spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
-## H2
-spring.h2.console.enabled=true
+## H2 - Console
+spring.h2.console.enabled=false
 spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=true
 
