--- a/turing-aem/aem-plugin/pom.xml
+++ b/turing-aem/aem-plugin/pom.xml
@@ -131,7 +131,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.viglet.turing.connector.plugin.aem.TurAemPlugin</mainClass>
+                                    <mainClass>com.viglet.turing.connector.plugin.aem.impl.TurAemPlugin</mainClass>
                                 </transformer>
                             </transformers>
                             <filters>
