Restrict allowed origins and improve Solr exception handling
Updated turing.allowedOrigins in application.properties to specify allowed hosts instead of using a wildcard. Enhanced Solr query error handling by explicitly catching RemoteSolrException for better logging and robustness.

--- a/turing-app/src/main/resources/application.properties
+++ b/turing-app/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.profiles.active=production
 server.port=${PORT:2700}
 
 ## Turing
-turing.allowedOrigins=*
+turing.allowedOrigins=http://localhost:4200,http://localhost:5173
 turing.multi-tenant=false
 turing.keycloak=false
 turing.url=http://localhost:2700
