--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -190,8 +190,8 @@
         </dependency>
         <dependency>
             <groupId>com.hazelcast</groupId>
-            <artifactId>hazelcast-all</artifactId>
-            <version>4.2.8</version>
+            <artifactId>hazelcast-spring</artifactId>
+            <version>5.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tika</groupId>
