Add turing-mcp-server module and initial implementation
Introduces the turing-mcp-server module to the Maven project, including its POM, application properties, logging configuration, and initial Java classes for server startup and tool services. Also updates the root pom.xml to include the new module and makes a minor cleanup in dev-token.service.ts by removing an unused import.

--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,7 @@
                 <module>turing-db</module>
                 <module>turing-aem</module>
                 <module>turing-web-crawler</module>
+                <module>turing-mcp-server</module>
                 <module>turing-app</module>
             </modules>
         </profile>
