Remove dashboard components from console page
Deleted SectionCards, ChartAreaInteractive, DataTable, and related UI/chart components. Updated ConsolePage to remove references to these components. Adjusted .gitignore files to exclude additional build artifacts and node directory.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ hs_err_pid*
 .flattened-pom.xml
 dependency-reduced-pom.xml
 /dist/
+turing-app/src/main/resources/public/index.html
+turing-app/src/main/resources/public/favicon.ico
