Update dependabot config and minor code cleanups
Added a new npm update group for turing-react in dependabot.yml and set a weekly schedule. Removed unused IconSpeakerphone import and added missing React import in login-form.tsx for consistency.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -31,3 +31,14 @@ updates:
         applies-to: version-updates
         patterns:
           - "*"
+  - package-ecosystem: "npm" # See documentation for possible values
+    directory: "/turing-react" # Location of package manifests
+    schedule:
+      interval: "weekly"
+    target-branch: "2025.3"
+    open-pull-requests-limit: 15
+    groups:
+      angular:
+        applies-to: version-updates
+        patterns:
+          - "*"
