--- a/turing-react/package.json
+++ b/turing-react/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "new-ui",
+  "name": "turing-react",
   "private": true,
-  "version": "0.0.0",
+  "version": "2025.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "compile": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
