--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -385,10 +385,13 @@
                 <executions>
                     <execution>
                         <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
-                        <id>install node and npm</id>
+                        <id>angular install node and npm</id>
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
+                        <configuration>
+                            <workingDirectory>../turing-ui</workingDirectory>
+                        </configuration>
                         <!-- optional: default phase is "generate-resources" -->
                         <phase>generate-resources</phase>
                     </execution>
@@ -401,6 +404,18 @@
                             <arguments>run compile</arguments>
                             <workingDirectory>../turing-ui</workingDirectory>
                         </configuration>
+                    </execution>
+                    <execution>
+                        <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
+                        <id>react install node and npm</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                        <configuration>
+                            <workingDirectory>../turing-react</workingDirectory>
+                        </configuration>
+                        <!-- optional: default phase is "generate-resources" -->
+                        <phase>generate-resources</phase>
                     </execution>
                     <execution>
                         <id>react compile</id>
