Refactor JCR_TITLE usage and update TypeScript version
Replaced custom JCR_TITLE constant with import from org.apache.jackrabbit.JcrConstants in AEM modules. Updated turing-react package name and downgraded TypeScript from 5.9.2 to 5.8.3. Adjusted Dependabot config to ignore TypeScript and renamed update group to 'react'.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -37,8 +37,10 @@ updates:
       interval: "weekly"
     target-branch: "2025.3"
     open-pull-requests-limit: 15
+    ignore:
+      - dependency-name: "typescript"
     groups:
-      angular:
+      react:
         applies-to: version-updates
         patterns:
           - "*"
