Update AEM Server version to 2025.3 and refactor
Bump version references from 2025.2 to 2025.3 across AEM Server modules and connector sample. Refactor Maven artifactId and naming for consistency (aem-turing → turing-aem-server). Update build.xml and pom.xml to use new connector version 2025.3.11. Improve formatting and code style in TurAemPluginProcess.java, and update OSGi package version annotation.

--- a/turing-aem/aem-server/core/pom.xml
+++ b/turing-aem/aem-server/core/pom.xml
@@ -14,17 +14,17 @@
  |  See the License for the specific language governing permissions and
  |  limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.viglet.turing.aem</groupId>
-        <artifactId>aem-turing</artifactId>
+        <artifactId>turing-aem-server</artifactId>
         <version>2025.3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>aem-turing.core</artifactId>
-    <name>Turing AEM - Core</name>
+    <name>Turing AEM Server - Core</name>
     <description>Core bundle for Turing AEM Project</description>
     <build>
         <plugins>
@@ -44,23 +44,8 @@
                         <configuration>
                             <bnd><![CDATA[
 Import-Package: javax.annotation;version=0.0.0,*
-                                ]]></bnd>
+                                ]]>                            </bnd>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>biz.aQute.bnd</groupId>
-                <artifactId>bnd-baseline-maven-plugin</artifactId>
-                <configuration>
-                    <failOnMissing>false</failOnMissing>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>baseline</id>
-                        <goals>
-                            <goal>baseline</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
