--- a/turing-aem/aem-server/config/pom.xml
+++ b/turing-aem/aem-server/config/pom.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-        xmlns="http://maven.apache.org/POM/4.0.0"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <!-- ====================================================================== -->
     <!-- P A R E N T  P R O J E C T  D E S C R I P T I O N                      -->
     <!-- ====================================================================== -->
     <parent>
         <groupId>com.viglet.turing.aem</groupId>
-        <artifactId>aem-turing</artifactId>
+        <artifactId>turing-aem-server</artifactId>
         <version>2025.3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -18,7 +16,7 @@
     <!-- ====================================================================== -->
     <artifactId>aem-turing.config</artifactId>
     <packaging>content-package</packaging>
-    <name>Turing AEM - Config</name>
+    <name>Turing AEM Server - Config</name>
     <description>OSGI Config - Content Package for Turing</description>
     <!-- ====================================================================== -->
     <!-- B U I L D                                                              -->
