--- a/turing-js-sdk/package.json
+++ b/turing-js-sdk/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@openviglet/turing-js-sdk",
-  "version": "1.0.0",
+  "version": "2025.3.2",
   "description": "TypeScript SDK for Turing Semantic Navigation Search API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "clean": "rm -rf dist",
+    "clean": "",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "keywords": [
