Replace npm ci with npm install in deploy workflow
Changed the deployment workflow to use 'npm install' instead of 'npm ci' for installing dependencies in the turing-js-sdk directory. This may address issues related to package installation or compatibility during deployment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
           git push
           cd turing-js-sdk
           npm version patch
-          npm ci
+          npm install
           npm run build
       - name: Cache Maven packages
         uses: actions/cache@v3
