Refactor SDK structure and add sample app
Moved SDK source files to js-sdk-lib subdirectory, updated build process with a custom build.js script, and adjusted package.json scripts. Added a new js-sdk-sample React app for usage demonstration. Refactored TurSNSiteSearchService to improve parameter normalization and updated import paths.

--- a/turing-js-sdk/js-sdk-lib/package.json
+++ b/turing-js-sdk/js-sdk-lib/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "npm install && tsc",
+    "build": "npm install && node build.js",
     "dev": "tsc --watch",
     "clean": "",
     "prepublishOnly": "npm run clean && npm install && npm run build"
@@ -24,7 +24,7 @@
     "axios": "^1.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.19.14",
     "typescript": "^5.0.0"
   },
   "repository": {
