Add default search params and refactor App.tsx
Introduces default search parameters (query, rows, page, sort) in .env and updates App.tsx to use these values. Refactors parameter handling and fetch logic to improve configurability and maintainability.

--- a/turing-js-sdk/js-sdk-sample/.env
+++ b/turing-js-sdk/js-sdk-sample/.env
@@ -1,3 +1,7 @@
 VITE_API_URL: 'http://localhost:2700'
 VITE_SN_SITE: 'wknd-author'
+VITE_SN_DEFAULT_QUERY: '*'
+VITE_SN_DEFAULT_ROWS: 10
+VITE_SN_DEFAULT_PAGE: 1
+VITE_SN_DEFAULT_SORT: 'relevance'
 VITE_LOCALE: 'en-US'
