Add TurSNURLImpl and integrate class-transformer
Introduced TurSNURLImpl for URL handling and updated models to use class-transformer decorators for type safety. Added class-transformer and reflect-metadata dependencies, and enabled experimental decorators and metadata emission in tsconfig. Models TurSNSiteLocale, TurSNSiteSearchDefaultFields, and TurSNSiteSearchPagination now use class-based definitions and type annotations for URL fields.

--- a/turing-js-sdk/js-sdk-lib/tsconfig.json
+++ b/turing-js-sdk/js-sdk-lib/tsconfig.json
@@ -6,6 +6,8 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "moduleResolution": "Node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
