--- a/turing-js-sdk/js-sdk-lib/package.json
+++ b/turing-js-sdk/js-sdk-lib/package.json
@@ -21,7 +21,9 @@
   "author": "OpenViglet",
   "license": "Apache-2.0",
   "dependencies": {
-    "axios": "^1.11.0"
+    "axios": "^1.11.0",
+    "class-transformer": "^0.5.1",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@types/node": "^24.4.0",
