Add caching for AEM JSON responses and update usages
Introduces Caffeine-based caching for AEM JSON HTTP responses in TurAemCommonsUtils, improving performance for repeated requests. Updates method signatures and usages to support cache toggling, refactors related classes to use the new cache-aware methods, and adds the Caffeine dependency. Also includes minor formatting and license header improvements.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,6 @@
 
   // Postman extension tweak
   "postman.settings.dotenv-detection-notification-visibility": false,
-  "java.configuration.updateBuildConfiguration": "interactive",
+  "java.configuration.updateBuildConfiguration": "automatic",
   "java.compile.nullAnalysis.mode": "automatic"
 }
